--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#welcome</h1>
-<p>Find me in app/views/home/welcome.html.erb</p>
+<div class="main-welcome">
+  <div class="container sub-container">
+    <h1>SAFE DRIVING FOR LIFE</h1>
+    <br>
+    <p class="lead">Find your safe way home just one click away with Pickers </p>
+    <hr>
+    <br>
+    <%= link_to "Start", start_path, class:"btn btn-default btn-lg", id:"start-btn" %>
+  </div><!--fin class container-secundario-->
+</div>
