--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,14 +9,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Pickers</a>
+        <%= link_to "Pickers", root_path, class:"navbar-brand" %>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">My Profile</a></li>
-          <li><a href="#">Log Out</a></li>          
+          <% if user_signed_in? %>
+            <li><a href="#">My Profile</a></li>
+            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li> 
+          <% else %>
+            <li><%= link_to "Sign Up", new_user_registration_path %></li>
+            <li><%= link_to "Log In", new_user_session_path %></li> 
+          <% end %>         
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
