--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,14 @@
 
 <%= render 'layouts/header' %>
 
+<% flash.each do |name, msg| %>
+  <% if name == "alert" %>
+    <%= content_tag(:div, msg, class: "alert alert-danger") %>
+  <% else %>
+    <%= content_tag(:div, msg, class: "alert alert-info") %>
+  <% end %>  
+<% end %>
+
 <%= yield %>
 
 </body>
