Create Data Base Models

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,8 +49,8 @@ body {
 .address-box {
   position: absolute;
   width: 460px;
-  left: 100px;
-  top: 95px;
+  left: 6%;
+  top: 13%;
   background: white;
   border-radius: 8px;
   padding: 10px 10px 4px;
