--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -11,7 +11,9 @@
       <i class="glyphicon glyphicon-map-marker"></i>
       <input type="text" class="form-control address-input" id="DestinationInput" placeholder="Destination address">
       <button class="btn btn-default address-btn" type="submit"><span class="glyphicon glyphicon-star"></span></button>
-    </div><hr>
+    </div>
+    <p>Multiple destinations? <a href="#"><span class="glyphicon glyphicon-plus"></span>Add destination</a></p>
+    <hr>
     <button type="Go" class="btn btn-primary pull-right" id="go-btn">Go</button>
   </div>
 </div>
