Add google predictor searchbox and geolocation

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
         
         <div class="form-group">
           <%= f.label :name %><br />
-          <%= f.email_field :username, autofocus: true, class:"form-control", placeholder:"This is how Pickers will identify you" %>
+          <%= f.text_field :username, autofocus: true, class:"form-control", placeholder:"This is how Pickers will identify you" %>
         </div>
 
         <div class="form-group">
