--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -1,43 +1,30 @@
 <div class="map-wrapper">
   <div id="map_canvas"></div>
   <div class="address-box">
-    <div class="form-group left-inner-addon">
-      <i class="glyphicon glyphicon-map-marker"></i>
-      <input type="text" class="form-control address-input" id="OriginInput" placeholder="Pick up address">
-      <button class="btn btn-default address-btn" type="submit"><span class="glyphicon glyphicon-screenshot"></span></button>
-      <button class="btn btn-default address-btn" type="submit"><span class="glyphicon glyphicon-star"></span></button>
-    </div>
-    <div class="form-group left-inner-addon">
-      <i class="glyphicon glyphicon-map-marker"></i>
-      <input type="text" class="form-control address-input" id="DestinationInput" placeholder="Destination address">
-      <button class="btn btn-default address-btn" type="submit"><span class="glyphicon glyphicon-star"></span></button>
-    </div>
-    <p>Multiple destinations? <a href="#"><span class="glyphicon glyphicon-plus"></span>Add destination</a></p>
-    <hr>
-    <button type="Go" class="btn btn-primary pull-right" id="go-btn">Go</button>
+    <%= form_for @location, remote: true do |f| %>
+      <div class="form-group">
+        <%= f.collection_select(:city_id , @cities, :id, :name, {:prompt => false}, options = {class:"form-control"}) %>
+      </div>
+    
+
+      <div class="form-group left-inner-addon">
+        <i class="glyphicon glyphicon-map-marker"></i>
+        
+        <input type="text" class="form-control address-input controls" id="origin-input" placeholder="Pick up address" onchange:"calcRoute();">
+        <button class="btn btn-default address-btn" id="set-cp"><span class="glyphicon glyphicon-screenshot"></span></button>
+        <button class="btn btn-default address-btn" type="submit"><span class="glyphicon glyphicon-star"></span></button>
+      </div>
+      <div class="form-group left-inner-addon">
+        <i class="glyphicon glyphicon-map-marker"></i>
+        <input type="text" class="form-control address-input controls" id="destination-input" placeholder="Destination address" onchange="calcRoute();">
+        <button class="btn btn-default address-btn" type="submit"><span class="glyphicon glyphicon-star"></span></button>
+      </div>
+      <p>Multiple destinations? <a href="#"><span class="glyphicon glyphicon-plus"></span>Add destination</a></p>
+      <hr>
+      <%= f.submit 'Go', class: 'btn btn-primary pull-right', id:"go-btn" %>
+    <% end %>
   </div>
 </div>
-
-<script type="text/javascript">
-  function initialize() {
-    var myPosition = new google.maps.LatLng(6.2087601, -75.5707247)
-    var mapOptions = {
-      center: myPosition,
-      zoom: 15,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-
-    var map = new google.maps.Map(document.getElementById("map_canvas"),
-        mapOptions);
-
-    var marker = new google.maps.Marker({
-      position: myPosition,
-      map: map,
-      title: "You Are Here"
-    });
-
-  }
-</script>
 
 <script>initialize()</script>
 
