--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <li><a href="#">My Profile</a></li>
+            <li><%= link_to "My Profile", profile_path(current_user.id) %></li>
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li> 
           <% else %>
             <li><%= link_to "Sign Up", new_user_registration_path %></li>
