--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -75,9 +75,9 @@ body {
     display: inline-block;
     width: 350px;
   }
-  #go-btn {
+  #find-btn {
     margin-bottom: 5px;
-    width: 85px;
+    // width: 85px;
   }
 }
 
