--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -1,10 +1,9 @@
 <div class="map-wrapper">
   <div id="map_canvas"></div>
   <div class="address-box">
-    <%= form_for @location, remote: true do |f| %>
-      <div class="form-group">
-        <%= f.collection_select(:city_id , @cities, :id, :name, {:prompt => false}, options = {class:"form-control"}) %>
-      </div>
+      <!-- <div class="form-group">
+        <%#= f.collection_select(:city_id , @cities, :id, :name, {:prompt => false}, options = {class:"form-control"}) %>
+      </div> -->
     
 
       <div class="form-group left-inner-addon">
@@ -25,7 +24,6 @@
         <h5>Distance: 5.6 Km | Cost: $20.000</h5>
         <button type="button" class="btn btn-primary pull-right" id="find-btn">Find me a Picker</button> -->
       </div>
-    <% end %>
   </div>
 </div>
 
