--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,7 @@ html {
 
 body {
   width: 100vw;
+  height: calc(100vh - 75px);
   padding-bottom: 40px;
 }
 
@@ -75,15 +76,19 @@ body {
     display: inline-block;
     width: 350px;
   }
-  #find-btn {
+  #find-btn, 
+  #take-service {
     margin-bottom: 5px;
     // width: 85px;
+  }
+  button {
+    margin: 0px 5px;
   }
 }
 
 
 #map_canvas { 
-  height: 100vh;
+  height: calc(100vh - 75px);
   width: 100vw;
 }
 
@@ -98,6 +103,10 @@ body {
     text-align: center;
     font-family: 'Amaranth', sans-serif;
   }
+}
+
+.alert {
+  margin-bottom: 0px;
 }
 
 
