--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -1,11 +1,12 @@
 <div class="map-wrapper">
-  <div id="map_canvas"></div>
-  <div class="address-box">
+  <div id="map_canvas">
+  </div>
+  <% if current_user.picker.nil? %>
+    <div class="address-box">
       <!-- <div class="form-group">
         <%#= f.collection_select(:city_id , @cities, :id, :name, {:prompt => false}, options = {class:"form-control"}) %>
       </div> -->
     
-
       <div class="form-group left-inner-addon">
         <i class="glyphicon glyphicon-map-marker"></i>
         
@@ -24,8 +25,22 @@
         <h5>Distance: 5.6 Km | Cost: $20.000</h5>
         <button type="button" class="btn btn-primary pull-right" id="find-btn">Find me a Picker</button> -->
       </div>
-  </div>
+    </div>
+  <% else %>
+    <div class="address-box hide">
+      <div class="calcs">
+      </div>
+    </div>
+  <% end %>
 </div>
 
-<script>initialize()</script>
+<script>
+  initialize();
+  <% if current_user.picker.nil? %>
+    setDirections();
+  <% else %>
+    var services = <%= @trips.to_json.html_safe %>;
+    showServices(services);
+  <% end %>
+</script>
 
