--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -78,11 +78,7 @@ body {
   }
   #find-btn, 
   #take-service {
-    margin-bottom: 5px;
-    // width: 85px;
-  }
-  button {
-    margin: 0px 5px;
+    margin: 0px 5px 5px 5px;
   }
 }
 
