--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -2,6 +2,10 @@
   <div id="map_canvas">
   </div>
   <% if current_user.picker.nil? %>
+
+    <div id="loading">
+      <img src="http://www.webdesign.org/img_articles/13053/loading-gif-animation.gif" alt="loading" />
+    </div>
     
     <div class="address-box">
       <!-- <div class="form-group">
