--- a/app/views/home/take_service.js.erb
+++ b/app/views/home/take_service.js.erb
@@ -1,3 +1,2 @@
-<!-- $("#project-content-modal").remove(); -->
 
-$('<%= j render "modal" %>').modal();
+$('<%= j render "modal_picker" %>').modal();
