--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA3V7mlvI9LS51rhRjkWqjqxgMj3Fd3Hss&sensor=true&v=3.exp&libraries=places">
   </script>
+  <script src="http://js.pusher.com/2.2/pusher.min.js"></script>
   <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script> -->
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
