Add company name to notifications

--- a/app/views/home/_modal_taken.html.erb
+++ b/app/views/home/_modal_taken.html.erb
@@ -6,7 +6,7 @@
         <h4 class="modal-title" id="myModalLabel">Picker heading your position</h4>
       </div>
       <div class="modal-body">
-        <p><strong><%= @trip.user.username %></strong>, your Picker's name is <strong><%= @trip.picker.user.username %></strong> and is their way to Pick you up.
+        <p><strong><%= @trip.user.username %></strong>, your Picker's name is <strong><%= @trip.picker.user.username %></strong> from the company <%= @trip.picker.company.name %> and is their way to Pick you up.
         <p>We'll notify you as soon as they arrive.</p>
         <p>Be ready!</p>
       </div>
